tests/codegen/fail/union/trait_no_fields.stderr
error: GraphQL union expects at least one union variant
       · note: https://spec.graphql.org/October2021#sec-Unions

 --> fail/union/trait_no_fields.rs:4:1
  |
4 | trait Character {}
  | ^^^^^
